--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,17 @@ h1, h2, h3 {
   margin: 0;
 }
 
-h2 {
+#title-banner h2 {
   line-height: .5em;
 }
 
-h3 {
+#title-banner h3 {
   line-height: .4em;
 }
 
-h1 {
+#title-banner h1 {
   line-height: .7em;
+  padding-left: 5px;
 }
 
 div#portrait {
