--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h1, h2, h3 {
   margin: 0;
 }
 
-#portrait, #content {
+#portrait {
   margin-left: auto;
   margin-right: auto;
   width: 66.67%;
@@ -21,6 +21,10 @@ h1, h2, h3 {
 #portrait {
   margin-top: 10%;
   margin-bottom: 10%;
+}
+
+#top, #content {
+  width:100%;
 }
 
 #title-banner {
@@ -34,6 +38,7 @@ h1, h2, h3 {
 
 #title-banner h3 {
   line-height: .4em;
+  margin-bottom:16px;
 }
 
 #title-banner h1 {
@@ -51,6 +56,7 @@ h1, h2, h3 {
 #table-of-contents ul {
   left: 0px;
   position: relative;
+  margin-top: 0px;
 }
 
 #table-of-contents ul li {
@@ -76,6 +82,4 @@ h1, h2, h3 {
 #content {
   clear: both;
   padding-top: 5%;
-  padding-left: 10%;
-  padding-right: 5%;
 }
