--- a/styles.css
+++ b/styles.css
@@ -50,20 +50,44 @@ h1, h2, h3 {
 #table-of-contents {
   margin-left: auto;
   margin-right: 0;
-  float:right;
+}
+
+#table-of-contents.right {
+  float: right;
+  margin-top: 0px;
+}
+
+#table-of-contents.left {
+  float: left;
+  margin-top: 10px;
 }
 
 #table-of-contents ul {
-  left: 0px;
   position: relative;
   margin-top: 0px;
 }
 
+#table-of-contents.right ul {
+  left: 0px;
+}
+
+#table-of-contents.left ul {
+  left: -40px;
+}
+
 #table-of-contents ul li {
   list-style-type: none;
-  text-align:right;
   padding-right: 5px;
 }
+
+#table-of-contents.right ul li {
+  text-align: right;
+}
+
+#table-of-contents.left ul li  {
+  text-align: left;
+}
+
 
 #table-of-contents ul li:hover {
   border-right: solid 1px black;
