--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ h1, h2, h3 {
   margin: 0;
 }
 
+a, a:link, a:visited, a:active, a:hover {
+  color: black;
+}
+
 #portrait {
   margin-left: auto;
   margin-right: auto;
@@ -100,7 +104,6 @@ h1, h2, h3 {
 #table-of-contents ul li a:active,
 #table-of-contents ul li a:hover {
   text-decoration: none;
-  color: black;
 }
 
 #content {
